--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@ robots.txt
 sites/all/README.txt
 sites/all/modules/README.txt
 sites/all/themes/README.txt
+sites/all/themes/viniga/_system/node-modules/
+sites/all/themes/viniga/_system/.sass-cache/
 
 # Ignore everything but the "sites" folder ( for non core developer )
 .htaccess
